# gravitalia

./: .gitmodules  BUILD.bazel  CODEOWNERS  Cargo.toml  README.md  SECURITY.md  WORKSPACE  WORKSPACE.bazel  package.json  pnpm-lock.yaml  shell.nix
.github/: dependabot.yml
.github/workflows/: ci.yml  graphql.yaml
front/: BUILD.bazel  app.vue  nuxt.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  uno.config.ts  wrangler.toml
front/locales/: en-US.json  fr-FR.json
front/pages/: index.vue  loading.html  test.vue
front/plugins/: apollo.ts
front/public/: sw.js
front/stores/: user.ts
front/types/: index.ts
graphql/: BUILD.bazel  Cargo.toml  Dockerfile  cargo-bazel-lock.json  config.yaml  default.nix  shell.nix
graphql/src/: main.rs
graphql/src/database/: bolt.rs  mem.rs  mod.rs
graphql/src/graphql/: user.rs
graphql/src/helpers/: config.rs  format.rs  mod.rs
graphql/src/model/: config.rs  user.rs
oauth2/: Cargo.toml
oauth2/src/: lib.rs
