load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//front:nuxt/package_json.bzl", "bin")

npm_link_all_packages(
    name = "node_modules",
)

SRCS = [
    "package.json",
    "nuxt.config.ts",
    "app.vue",
    "tsconfig.json",
]

BUILD_DEPS = [":node_modules/" + d for d in [
    #"@pinia/nuxt",
    #"@nuxt/devtools",
    #"@nuxtjs/apollo",
    #"@nuxtjs/color-mode",
    #"@nuxtjs/i18n",
    #"@nuxtjs/tailwindcss",
    #"@unocss/nuxt",
    #"pinia",

    "@nuxt/devtools",
    "nuxt",
    "vue",
    "vue-router",
]]

bin.nuxt(
    name = "front",
    args = [
        "generate",
    ],
    srcs = SRCS + BUILD_DEPS + glob([
        "assets/**",
        "components/**/*.vue",
        "locales/*.json",
        "middleware/*.ts",
        "pages/**/*.vue",
        "plugins/*.ts",
        "public/**",
        "static/*",
        "stores/*.ts",
        "server/*.ts",
        "types/*.ts"
    ]),
    visibility = ["//visibility:private"],
    chdir = package_name(),
    out_dirs = ["dist", ".output/public", ".nuxt"],
)
