[package]
name = "graphql"
version = "0.1.0"
repository = "https://github.com/RealHinome/gravitalia"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false

[profile.dev]
opt-level = 0
debug = true

[dependencies]
warp = "0.3"
juniper = "0.15"
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }
juniper_warp = "0.7.0"

r2d2 = "0.8.10"
r2d2-memcache = "0.6.0"
neo4rs = "0.7.0"

log = "0.4"
fern = "0.6"

anyhow = "1"
serde = "1"
serde_yaml = "0.9"